BJS2-96258 // Fixing code after review v4.